load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "module.go",
        "provider.go",
    ],
    importpath = "github.com/trenddapp/backend/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_config//:config",
        "@org_uber_go_fx//:fx",
    ],
)
