load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = [
        "error.go",
        "module.go",
        "provider.go",
    ],
    importpath = "github.com/trenddapp/backend/pkg/http",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@org_uber_go_config//:config",
        "@org_uber_go_fx//:fx",
    ],
)
