load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "currency_lib",
    srcs = ["main.go"],
    importpath = "github.com/trenddapp/backend/service/currency",
    visibility = ["//visibility:private"],
    deps = ["//service/currency/cmd"],
)

go_binary(
    name = "currency",
    embed = [":currency_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "currency_image",
    binary = ":currency",
)

container_push(
    name = "publish",
    format = "Docker",
    registry = "docker.io",
    repository = "parsaakbari1209/trenddapp-backend-currency",
    image = ":currency_image",
    tag = "latest",
)
