load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "nft_lib",
    srcs = ["main.go"],
    importpath = "github.com/trenddapp/backend/service/nft",
    visibility = ["//visibility:private"],
    deps = ["//service/nft/cmd"],
)

go_binary(
    name = "nft",
    embed = [":nft_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "nft_image",
    binary = ":nft",
)

container_push(
    name = "publish",
    format = "Docker",
    registry = "docker.io",
    repository = "parsaakbari1209/trenddapp-backend-nft",
    image = ":nft_image",
    tag = "latest",
)
