load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bun",
    srcs = [
        "config.go",
        "module.go",
        "provider.go",
    ],
    importpath = "github.com/trenddapp/backend/pkg/database/bun",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_uptrace_bun//:bun",
        "@com_github_uptrace_bun_dialect_pgdialect//:pgdialect",
        "@com_github_uptrace_bun_driver_pgdriver//:pgdriver",
        "@com_github_uptrace_bun_extra_bundebug//:bundebug",
        "@org_uber_go_config//:config",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)
