load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["module.go"],
    importpath = "github.com/trenddapp/backend/service/currency/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app",
        "//service/currency/client/coinmarketcap",
        "//service/currency/http",
        "@org_uber_go_fx//:fx",
    ],
)
