load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["module.go"],
    importpath = "github.com/trenddapp/backend/service/nft/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app",
        "//service/nft/client/etherscan",
        "//service/nft/client/nftport",
        "//service/nft/http",
        "@org_uber_go_fx//:fx",
    ],
)
