load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "serve.go",
        "serve_http.go",
    ],
    importpath = "github.com/trenddapp/backend/service/nft/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//service/nft/app",
        "//service/nft/http",
        "@com_github_spf13_cobra//:cobra",
        "@org_uber_go_fx//:fx",
    ],
)
