load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = [
        "module.go",
        "register.go",
        "server.go",
    ],
    importpath = "github.com/trenddapp/backend/service/user/http",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth",
        "//pkg/http",
        "//service/user/model",
        "//service/user/repository/nonce",
        "//service/user/repository/user",
        "@com_github_gin_gonic_gin//:gin",
        "@org_uber_go_fx//:fx",
    ],
)
