load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["module.go"],
    importpath = "github.com/trenddapp/backend/service/wordle/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app",
        "//pkg/database/bun",
        "//service/wordle/http",
        "//service/wordle/migration",
        "//service/wordle/repository/word",
        "//service/wordle/repository/wordle",
        "//service/wordle/workflow",
        "@org_uber_go_fx//:fx",
    ],
)
