load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migration",
    srcs = [
        "embed.go",
        "module.go",
    ],
    embedsrcs = ["20220101000000_wordles.up.sql"],
    importpath = "github.com/trenddapp/backend/service/wordle/migration",
    visibility = ["//visibility:public"],
    deps = ["//pkg/migration"],
)
