load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "workflow",
    srcs = [
        "module.go",
        "workflow.go",
    ],
    importpath = "github.com/trenddapp/backend/service/wordle/workflow",
    visibility = ["//visibility:public"],
    deps = [
        "//service/wordle/model",
        "//service/wordle/repository/word",
        "//service/wordle/repository/wordle",
        "@org_uber_go_fx//:fx",
    ],
)
