load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "coinmarketcap",
    srcs = [
        "client.go",
        "config.go",
        "interface.go",
        "module.go",
    ],
    importpath = "github.com/trenddapp/backend/service/currency/client/coinmarketcap",
    visibility = ["//visibility:public"],
    deps = [
        "//service/currency/model",
        "@org_uber_go_config//:config",
        "@org_uber_go_fx//:fx",
    ],
)
