load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["module.go"],
    importpath = "github.com/trenddapp/backend/service/currency/pkg/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app",
        "//service/currency/pkg/client/coinmarketcap",
        "//service/currency/pkg/http",
        "@org_uber_go_fx//:fx",
    ],
)
