load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["module.go"],
    importpath = "github.com/trenddapp/backend/service/user/pkg/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app",
        "//pkg/database/bun",
        "//service/user/pkg/http",
        "//service/user/pkg/migration",
        "//service/user/pkg/repository/nonce",
        "//service/user/pkg/repository/user",
        "@org_uber_go_fx//:fx",
    ],
)
