load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "user",
    srcs = [
        "interface.go",
        "module.go",
        "repository.go",
    ],
    importpath = "github.com/trenddapp/backend/service/user/repository/user",
    visibility = ["//visibility:public"],
    deps = [
        "//service/user/model",
        "@com_github_gofrs_uuid//:uuid",
        "@com_github_uptrace_bun//:bun",
        "@org_uber_go_fx//:fx",
    ],
)
